src/components/Gameplay/GameplayHeader/GameplayHeader.scss
@import "../../../common/colors";
@import "../../../common/variables";

.gameplay-header-wrapper {
  color: #fff;
  display: flex;
  min-height: 100px;
  justify-content: center;

  @include for-big-desktop {
    min-height: 108px;
  }

  .gameplay-header-content {
    display: inline-flex;

    @include for-big-desktop {
      display: flex;
      flex-grow: 1;
      justify-content: center;
    }

    .section {
      width: 262px;
      position: relative;
      top: 9px;
      display: flex;
      flex-direction: column;

      @include for-big-desktop {
        width: 411px;
      }

      .stats-container {
        display: flex;
      }

      .stats-wrapper {
        margin: 15px 0 10px 0;
        display: flex;
        align-items: center;
        justify-content: center;

        &.dev-stats {
          margin-right: 19px;
          margin-left: 60px;

          @include for-big-desktop {
            margin-left: 85px;
          }
        }

        &.funds-stats {
          align-items: flex-start;

          .label {
            margin-left: 4px;
          }

          .count div {
            font-family: $font-secondary;
          }

          .fpb {
            font-family: $font-secondary;
            position: absolute;
            display: flex;
            font-size: 12px;
            line-height: 8px;
            top: 33px;
            color: $yellow;

            @include for-big-desktop {
              top: 39px;
              font-size: 17px;
            }

            span {
              font-family: $font-secondary;
              font-size: 8px;
              margin-left: 4px;

              @include for-big-desktop {
                font-size: 11px;
              }
            }
          }
        }

        .funds-circle,
        .dev-circle {
          margin-right: 7px;
          width: 26px;
          height: 26px;
          border-radius: 50px;

          @include for-big-desktop {
            width: 37px;
            height: 37px;
          }
        }

        .dev-circle {
          background: linear-gradient(180deg, #9B01C1 24.31%, rgba(155, 1, 193, 0.67) 100%);
        }
        .funds-circle {
          background: linear-gradient(180deg, #FF9D14 24.31%, rgba(255, 157, 20, 0.67) 100%);;
        }

        img {
          margin-right: 7px;
          width: 26px;
          height: 26px;

          @include for-big-desktop {
            width: 37px;
            height: 37px;
          }
        }

        .meta-wrapper {
          text-transform: uppercase;

          .count {
            font-family: $font-secondary;
            font-size: 16px;
            display: flex;
            align-items: baseline;
            line-height: 18px;

            @include for-big-desktop {
              font-size: 23px;
            }

            &.smallest {
              font-size: 8px;
              position: relative;
              top: -1px;
              @include for-big-desktop {  font-size: 11px;  }
            }
            &.small {
              font-size: 11px;
              @include for-big-desktop {  font-size: 18px;  }
            }
            &.mid {
              font-size: 14px;
              @include for-big-desktop {  font-size: 21px;  }
            }
            &.large {
              font-size: 16px;
              @include for-big-desktop {  font-size: 23px;  }
            }
          }

          .label {
            font-size: 8px;

            @include for-big-desktop {
              font-size: 11px;
            }

            &.fun {
              white-space: nowrap;
            }
          }
        }
      }

      .bar {
        border: 2px solid $dark-purple;
        box-shadow: 0 0 44px #441E83;
        width: 100%;
      }

    }

    .central {
      position: relative;

      .central-small {
        position: absolute;

        img {
          width: 190px;
          position: absolute;
          z-index: 4;
          top: -38px;
          left: -12px;

          @include for-big-desktop {
            width: 243px;
            left: -37px;
            top: -50px
          }
        }

        .level {
          font-weight: bold;
          font-size: 13px;
          text-transform: uppercase;
          color: #FF9D14;
          position: absolute;
          z-index: 5;
          width: 84px;
          left: 42px;
          top: 6px;
          text-align: center;

          @include for-big-desktop {
            font-size: 18px;
            width: 95px;
            left: 38px;
          }
        }
      }

      .central-big {
        position: relative;
        width: 170px;
        top: 10px;

        .big-stats {
          z-index: 2;
          position: absolute;
          text-align: center;
          left: 8px;
          top: 26px;
          width: 155px;

          .name {
            font-family: $font-secondary;
            font-size: 23px;
            text-shadow: 0 0 30px rgba(33, 35, 234, 0.7);
            width: 100%;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
            display:inline-block;

            .no-name {
              text-transform: uppercase;
            }

            @include for-big-desktop {
              font-size: 32px;
            }
          }

          .xp-wrapper {
            font-family: $font-secondary;
            font-size: 12px;
            color: white;
            position: relative;
            top: -4px;
            z-index: 12;

            @include for-big-desktop {
              font-size: 17px;
              top: -10px;
            }
          }

          .xp-loader-wrapper {
            position: absolute;
            bottom: 7px;
            left: 0;
            height: 14px;
            width: 156px;

            @include for-big-desktop {
              transform: scale(1.29);
              bottom: 18px;
              left: -1px;
            }
          }
        }

        img {
          position: absolute;
          width: 350px;
          top: -42px;
          left: -90px;
          z-index: 2;

          @include for-big-desktop {
            width: 449px;
            left: -140px;
            top: -60px;
          }
        }
      }
    }
  }
}

